# react-native-nitro-text

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NitroText.podspec  PR_BODY.md  README.md  eslint.config.mjs  jest.config.js  nitro.json  package.json  post-script.js  react-native.config.js
.github/: pull_request_template.md
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: NitroTextRegisterProvider.cpp  NitroTextRegisterProvider.hpp  cpp-adapter.cpp
android/src/main/java/com/nitrotext/: HtmlLinkMovementMethod.kt  HybridNitroText.kt  NitroLineHeightSpan.kt  NitroTextImpl+LineHeightSpan.kt  NitroTextImpl.kt  NitroTextPackage.kt  NitroTextView.kt  NitroTextViewManager.kt
android/src/main/java/com/nitrotext/renderers/: NitroHtmlRenderer.kt  NitroRendererInterface.kt
android/src/main/java/com/nitrotext/spans/: BulletListSpan.kt  LetterSpacingSpan.kt  NitroLineHeightSpan.kt  NumberedListSpan.kt  UrlSpanNoUnderline.kt  VerticalMarginSpan.kt
cpp/: NitroHtmlUtils.cpp  NitroHtmlUtils.hpp  NitroTextComponentDescriptor.cpp  NitroTextComponentDescriptor.hpp  NitroTextLogger.hpp  NitroTextShadowNode.cpp  NitroTextShadowNode.hpp  NitroTextUtil.cpp  NitroTextUtil.hpp
example/: App.tsx  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
ios/: Bridge.h  ColorParser.swift  HybridNitroText.swift  HybridNitroTextComponent+ShadowOverride.mm  HybridNitroTextComponentOverride.mm  NitroHtmlRenderer.swift  NitroMarkdownUtils.hpp  NitroMarkdownUtils.mm  NitroTextComponentDescriptor.hpp  NitroTextImpl.swift  (+10 more)
(+42 files in other folders)
